[package]
name = "methods-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[build-dependencies]
risc0-build = { version = "0.14.0", git = "https://github.com/risc0/risc0", rev = "d83c7fef80d0ebb87bc86567447efee633a24c4e" } 

[dependencies]
risc0-zkvm = { version = "0.14.0", default-features = false, git = "https://github.com/risc0/risc0", rev = "d83c7fef80d0ebb87bc86567447efee633a24c4e"  }
sp-std = { version = "5.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.39" }

[patch.crates-io]
crossbeam = { git = "https://github.com/risc0/crossbeam", rev = "b25eb50f8c193f36dacb6739692261ea96827bb7" }
crossbeam-utils = { git = "https://github.com/risc0/crossbeam", rev = "b25eb50f8c193f36dacb6739692261ea96827bb7" }
crossbeam-channel = { git = "https://github.com/risc0/crossbeam", rev = "b25eb50f8c193f36dacb6739692261ea96827bb7" }
radium = { git = "https://github.com/ferrilab/radium", rev = "723bed5abd75994ee4b7221b8b12c9f4e77ce408" }